--- a/resources/views/index.twig
+++ b/resources/views/index.twig
@@ -10,5 +10,37 @@
 </head>
 <body class="bg-gray-100">
 
+    <div class="bg-white">
+        <header class="absolute inset-x-0 top-0 z-50">
+            <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
+                <div class="flex lg:flex-1">
+                    <a href="#" class="-m-1.5 p-1.5">
+                        <span class="sr-only">Web Framework</span>
+                    </a>
+                </div>
+            </nav>
+        </header>
+
+        <div class="relative isolate px-6 pt-14 lg:px-8">
+            <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
+                <div class="relative left-[calc(50%-11rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 rotate-[30deg] bg-gradient-to-tr from-[#81DACA] to-[#00CEC8] opacity-30 sm:left-[calc(50%-30rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 91.5% 65.6%, 100% 26.9%, 85.5% 0.1%, 80.7% 2%, 72.5% 32.5%, 53.95% 62.93%, 52.4% 68.1%, 47.5% 58.3%, 52.4% 37.25%, 30.49% 88.44%, 0% 54.65%, 10.4% 98.96%, 38.11% 83.9%, 67.6% 100%, 68.58% 47.09%);"></div>
+            </div>
+            <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
+                <div class="text-center">
+                    <h1 class="text-balance text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl">Web Framework</h1>
+                    <p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">Inspire your self!</p>
+                    <div class="mt-10 flex items-center justify-center gap-x-6">
+                        <a href="#" class="rounded-md bg-green-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-green-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-green-600">Get started</a>
+                        <a href="#" class="text-sm/6 font-semibold text-gray-900">Learn more <span aria-hidden="true">→</span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]" aria-hidden="true">
+                <div class="relative left-[calc(50%+3rem)] aspect-[1155/678] w-[36.125rem] -translate-x-1/2 bg-gradient-to-tr from-[#81DACA] to-[#00CEC8] opacity-30 sm:left-[calc(50%+36rem)] sm:w-[72.1875rem]" style="clip-path: polygon(74.1% 44.1%, 100% 61.6%, 72.85% 31.25%, 85.5% 0.1%, 80.7% 2%, 70.13% 19.93%, 60.2% 62.4%, 52.4% 68.1%, 47.5% 58.3%, 49.25% 38.08%, 19.7% 23.94%, 0% 39.15%, 32.85% 98.41%, 32.85% 49.96%, 76.1% 97.7%, 83.14% 63.9%)"></div>
+            </div>
+        </div>
+    </div>
+
+
 </body>
 </html>
